--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "multer": "^1.1.0",
-    "xls-to-json-lc": "^0.3.4",
-    "xlsx-to-json-lc": "^0.4.1"
+    "xls-to-json-lc": "0.3.4",
+    "xlsx-to-json-lc": "0.5.0"
   }
 }
