--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.1",
+    "body-parser": "1.18.3",
     "express": "^4.13.4",
-    "multer": "^1.1.0",
+    "multer": "1.4.1",
     "xls-to-json-lc": "0.3.4",
     "xlsx-to-json-lc": "0.5.0"
   }
